Bug icons phonegap solved
+ attempt to optimise jquery mobile (config.js)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,34 +75,36 @@ html,body{height:100%;}
 [class*=" icon-"]:before {
   font-family: 'fontello';
   font-style:normal;
+  font-weight: normal;
   display: inline-block;
   margin-right: 0.2em;
 }
 
 .icon-star:before { content: '\2605'; } 
-.icon-star-empty:before { content: '\2606'; }
-.icon-menu:before { content: '\2630'; }
+.icon-star-empty:before { content: '\2606'; } 
+.icon-menu:before { content: '\2630'; } 
 .icon-layout:before { content: '\268f'; } 
 .icon-cog:before { content: '\2699'; } 
-.icon-mail:before { content: '\2709'; } 
+.icon-mail:before { content: '\2709'; }
 .icon-pencil:before { content: '\270e'; } 
-.icon-direction:before { content: '\27a2'; }
-.icon-forward:before { content: '\27a6'; } 
-.icon-help-circled:before { content: '\e704'; color: $bleu;font-size:1.3em;margin-right:1px; }
-.icon-info-circled:before { content: '\e705'; color :$bleu;font-size:1.3em;margin:-5px 1px 0 0; }
-.icon-tag:before { content: '\e70c'; }
-.icon-comment-1:before { content: '\e800'; } 
-.icon-address:before { content: '\356'; } 
+.icon-direction:before { content: '\27a2'; } 
+.icon-forward:before { content: '\27a6'; }
+.icon-list:before { content: '\e005'; } 
+.icon-help-circled:before { content: '\e704';color: $bleu;font-size:1.3em;margin-right:1px; } 
+.icon-info-circled:before { content: '\e705';color :$bleu;font-size:1.3em;margin:-5px 1px 0 0; } 
+.icon-tag:before { content: '\e70c'; } 
+.icon-comment:before { content: '\e718'; } 
+.icon-address:before { content: '\e723'; } 
 .icon-location:before { content: '\e724'; } 
 .icon-map:before { content: '\e727'; } 
-.icon-twitter:before { content: '\f309';color:#28aae1; }
-.icon-facebook:before { content: '\f30c';color:#3b5998; } 
-.icon-picture:before { content: '\1f304'; } 
-.icon-mic:before { content: '\1f3a4'; }
-.icon-user:before { content: '\1f464'}
-.icon-doc-text:before { content: '\1f4c4'; }
-.icon-search:before { content: '\1f50d'; } 
-.icon-clock:before { content: '\1f554'; }
+.icon-twitter:before { content: '\f309';color:#28aae1;  } 
+.icon-facebook:before { content: '\f30c'; color:#3b5998;} 
+.icon-picture:before { content: '\f304'; } 
+.icon-mic:before { content: '\f3a4'; }
+.icon-user:before { content: '\f464'; } 
+.icon-doc-text:before { content: '\75'; } 
+.icon-search:before { content: '\f50d'; } 
+.icon-clock:before { content: '\f554'; }
 
 /*------------------------OSSATURE--------------------------------------------*/
 /*----------------------------------------------------------------------------*/
